Bug 259273 - missing locale in useragent string (and in navigator.locale) r+sr=darin a=asa